# py-perf

./: .gitignore  .pypirc  AWS_SETUP.md  DAEMON_INSTALLATION.md  ENHANCED_EXCEPTIONS.md  README.md  README_PACKAGE.md  build_package.py  py-perf-daemon  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  test_django_server.py  test_exception_handler.py  test_failure_demo.py  test_global_variables.py  test_globals_disabled.py  test_library_errors.py  test_multiple_oracle_errors.py  test_no_permissions.py  test_oracle_demo.py  test_plain_summary.py  test_zero_setup.py  tester.py  upload_package.sh  version_manager.py
.github/workflows/: ci.yml
config/: daemon.yaml  daemon.yaml.example  default.yaml
examples/: enhanced_exceptions_demo.py  simple_import_test.py
pyperfweb/: settings.py
pyperfweb/dashboard/: views.py
scripts/: README.md  com.pyperf.daemon.plist  install-daemon-linux.sh  install-daemon-macos.sh  install-daemon-windows.ps1  py-perf-daemon.service  start-daemon-macos.sh  status-daemon-macos.sh  stop-daemon-macos.sh
src/py-perf/: __init__.py  core.py
src/py_perf/: __init__.py  config.py  core.py  default.yaml  exception_handler.py  failure_capture.py  hostname_utils.py  optimized_system_storage.py
